--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,22 +1,20 @@
-<!-- nav.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#"></a>
-    <img alt="logo" src="/images/student-48.png"/>
-    <button aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-            data-target="#myNavbar" data-toggle="collapse" type="button">
+    <img src="/images/student-48.png" alt="logo"/>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+            aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="#myNavbar">
+    <div class="collapse navbar-collapse" id="my-navbarColor02">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
                 <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown active">
-                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data- href="#"
-                   id="navbarDropdown"
-                   role="button" toggle="dropdown"> Gestión de notas
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false"> Gestión de notas
                 </a>
-                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/mark/list">Ver Notas</a>
                     <a class="dropdown-item" href="/mark/add">Agregar Nota</a>
                     <div class="dropdown-divider"></div>
@@ -24,11 +22,10 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data- href="#"
-                   id="profesorDropdown"
-                   role="button" toggle="dropdown"> Gestión de profesores
+                <a class="nav-link dropdown-toggle" href="#" id="profesorDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false"> Gestión de profesores
                 </a>
-                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/professor/list">Ver profesores</a>
                 </div>
             </li>
@@ -44,8 +41,8 @@
                 Identifícate</a></li>
         </ul>
         <!--<form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
         </form> -->
     </div>
 </nav>
