--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -13,6 +13,7 @@
     <!-- JS files: jQuery primero y luego Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/script/languages.js"></script>
     <!-- Nuestra CSS -->
     <link rel="stylesheet" href="/css/custom.css" />
 </head>
