--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#"></a>
-    <img src="/images/student-48.png" alt="logo"/>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
-            aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <img alt="logo" src="/images/student-48.png"/>
+    <button aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarColor02" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="my-navbarColor02">
@@ -11,10 +11,10 @@
                 <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false"> Gestión de notas
+                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
+                   id="navbarDropdown" role="button"> Gestión de notas
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                     <a class="dropdown-item" href="/mark/list">Ver Notas</a>
                     <a class="dropdown-item" href="/mark/add">Agregar Nota</a>
                     <div class="dropdown-divider"></div>
@@ -22,23 +22,43 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="profesorDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false"> Gestión de profesores
+                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
+                   id="profesorDropdown" role="button"> Gestión de profesores
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                     <a class="dropdown-item" href="/professor/list">Ver profesores</a>
                 </div>
             </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="/registrarse">
-                    <i class='fas fa-user-alt' style='font-size:16px'></i>
-                    Registrate</a>
+            <li class="nav-item dropdown">
+                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
+                   id="btnLanguage" role="button">
+                    <span th:text="#{language.change}"></span>
+                </a>
+                <div aria-labelledby="navbarDropdown" class="dropdown-menu" id="languageDropdownMenuButton">
+                    <a class="dropdown-item" id="btnEnglish" value="EN">
+                        <img style="border: 0; float: left; margin-right: 15px" th:src="@{/images/if_uk_flag.png}"/>
+                        <span th:text="#{language.en}">Inglés</span>
+                    </a>
+                    <a class="dropdown-item" id="btnSpanish" value="ES">
+                        <img style="border: 0; float: left; margin-right: 15px" th:src="@{/images/if_spain_flag.png}"/>
+                        <span th:text="#{language.es}">Español</span>
+                    </a>
+                </div>
             </li>
-            <li class="nav-item"><a class="nav-link" href="/identificarse">
-                <i class='fas fa-sign-in-alt' style='font-size:16px'></i>
-                Identifícate</a></li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup" th:text="#{signup.message}">
+                    <i class='fas fa-user-alt' style='font-size:16px'></i>
+                    <span>Registrate</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login" th:text="#{login.message}">
+                    <i class='fas fa-sign-in-alt' style='font-size:16px'></i>
+                    <span>Identificate</span>
+                </a>
+            </li>
         </ul>
         <!--<form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
