--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <body>
 <nav th:replace="fragments/nav"></nav>
 <div class="container" style="text-align: center">
-    <h2>Bienvenidos a la página principal</h2>
+    <h2 th:text="#{welcome.message}">Bienvenidos a la página principal</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
 </div>
 <footer th:replace="fragments/footer"></footer>
