SDI-2122-501-3.3-Acceso a datos con entidades relacionadas

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -17,10 +17,19 @@
                 <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                     <a class="dropdown-item" href="/mark/list">Ver Notas</a>
                     <a class="dropdown-item" href="/mark/add">Agregar Nota</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/mark/filter">Filtrar</a>
                 </div>
             </li>
+
+            <li class="nav-item dropdown">
+                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
+                   id="userDropdown" role="button"> Gestión de usuarios
+                </a>
+                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+                    <a class="dropdown-item" href="/user/add">Agregar usuario</a>
+                    <a class="dropdown-item" href="/user/list">Ver usuarios</a>
+                </div>
+            </li>
+
             <li class="nav-item dropdown">
                 <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
                    id="profesorDropdown" role="button"> Gestión de profesores
