--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,14 +5,15 @@
 <!-- Barra de Navegación superior -->
 <nav th:replace="fragments/nav"/>
 <div class="container">
-    <h2>Agregar usuario</h2>
-    <form class="form-horizontal" method="post" action="/user/add">
+    <h2>Regístrate como usuario</h2>
+    <form class="form-horizontal" th:object="${user}" method="post" action="/user/add">
         <div class="form-group">
             <label class="control-label col-sm-2" for="dni">DNI:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="dni" name="dni"
                        placeholder="99999999Y" required="true"/>
             </div>
+            <span class="text-danger" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></span>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
@@ -20,6 +21,7 @@
                 <input type="text" class="form-control" id="name" name="name"
                        placeholder="Ejemplo: Juan" required="true"/>
             </div>
+            <span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="lastName">Apellidos:</label>
@@ -27,6 +29,7 @@
                 <input type="text" class="form-control" id="lastName" name="lastName"
                        placeholder="Ejemplo: Peréz Almonte" required="true"/>
             </div>
+            <span class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Password:</label>
@@ -34,6 +37,7 @@
                 <input type="password" class="form-control" id="password" name="password"
                        placeholder="Entre el Password" />
             </div>
+            <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
         </div>
         <div class="form-group" >
             <label class="control-label col-sm-2" id="passwordConfirm" for="passwordConfirm">Repita
@@ -42,6 +46,7 @@
                 <input type="password" class="form-control" name="passwordConfirm"
                        placeholder="Repita el Password" />
             </div>
+            <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
