“SDI-2122-501-sesión3-Ejercicio-complementario2

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -37,6 +37,9 @@
                 <div aria-labelledby="navbarDropdown" class="dropdown-menu">
                     <a class="dropdown-item" href="/professor/list">Ver profesores</a>
                 </div>
+                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+                    <a class="dropdown-item" href="/professor/add">Añadir profesor</a>
+                </div>
             </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
