--- a/src/main/resources/templates/mark/edit.html
+++ b/src/main/resources/templates/mark/edit.html
@@ -7,13 +7,14 @@
 <nav th:replace="fragments/nav"></nav>
 <div class="container" id="main-container">
   <h2>Editar nota</h2>
-  <form class="form-horizontal" method="post" th:action="${'/mark/edit/' + mark.id}">
+  <form class="form-horizontal" method="post" th:object="${mark}" th:action="${'/mark/edit/' + mark.id}">
     <div class="form-group">
       <label class="control-label col-sm-2" for="description">Descripción:</label>
       <div class="col-sm-10">
         <input th:value="${mark.description}" id="description" type="text" class="form-control" name="description"
                placeholder="Ejemplo Ejercicio 1" required="true"/>
       </div>
+      <span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="score">Puntuación:</label>
@@ -22,6 +23,7 @@
                placeholder="Entre 0 y 10"
                required="true"/>
       </div>
+      <span class="text-danger" th:if="${#fields.hasErrors('score')}" th:errors="*{score}"></span>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
