--- a/src/main/resources/templates/professor/add.html
+++ b/src/main/resources/templates/professor/add.html
@@ -14,18 +14,21 @@
       <div class="col-sm-10">
         <input type="text" class="form-control" id="dni" name="dni" placeholder="Ejemplo 123456789" required="true" />
       </div>
+      <span class="text-danger" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></span>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Nombre:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="name" name="name" placeholder="Ejemplo: Jesus" required="true" />
       </div>
+      <span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="surname">Apellido:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="surname" name="surname" placeholder="Ejemplo: Alonso Garcia" required="true" />
       </div>
+      <span class="text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></span>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="categoria">Categoria:</label>
