--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,7 +6,7 @@
 <nav th:replace="fragments/nav"/>
 <div class="container">
     <h2>Regístrate como usuario</h2>
-    <form class="form-horizontal" th:object="${user}" method="post" action="/user/add">
+    <form class="form-horizontal" th:object="${user}" method="post" action="/signup">
         <div class="form-group">
             <label class="control-label col-sm-2" for="dni">DNI:</label>
             <div class="col-sm-10">
