--- a/src/main/resources/templates/mark/list.html
+++ b/src/main/resources/templates/mark/list.html
@@ -14,6 +14,13 @@
             $("#tableMarks").load('/mark/list/update');
         });
     </script>
+    <form class="form-inline" action="/mark/list">
+        <div class="form-group">
+            <input name="searchText" type="text" class="form-control" size="50"
+                   placeholder="Buscar por descripción o nombre del alumno">
+        </div>
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
     <div class="table-responsive">
         <table class="table table-hover" th:fragment="tableMarks" id="tableMarks">
             <thead>
