SDI-2122-501-4.6-SpringBoot-Paginacion

--- a/src/main/resources/templates/mark/list.html
+++ b/src/main/resources/templates/mark/list.html
@@ -7,13 +7,6 @@
 
 <div class="container" id="main-container">
     <h2>Notas</h2>
-    <p>Las notas que actualmente figuran en el sistema son las siguientes:</p>
-    <button type="button" id="updateButton" class="btn btn-default">Actualizar</button>
-    <script>
-        $("#updateButton").click(function () {
-            $("#tableMarks").load('/mark/list/update');
-        });
-    </script>
     <form class="form-inline" action="/mark/list">
         <div class="form-group">
             <input name="searchText" type="text" class="form-control" size="50"
@@ -21,6 +14,20 @@
         </div>
         <button type="submit" class="btn btn-primary">Buscar</button>
     </form>
+    <p>Las notas que actualmente figuran en el sistema son las siguientes:</p>
+    <button type="button" id="updateButton" class="btn btn-default">Actualizar</button>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        $( "#updateButton" ).click(function() {
+            var numberPage = [[${param.page}]];
+            var urlUpdate = '/mark/list/update';
+            if (numberPage != null ){
+                urlUpdate += "?page="+numberPage[0];
+            }
+            $("#tableMarks").load(urlUpdate);
+        });
+        /*]]>*/
+    </script>
     <div class="table-responsive">
         <table class="table table-hover" th:fragment="tableMarks" id="tableMarks">
             <thead>
@@ -46,9 +53,14 @@
                                     class="btn btn-success">Reenviar</button>
                             <script th:inline="javascript">
                                 /*<![CDATA[*/
-                                $( "#resendButton"+ "[[${mark.id}]]").click(function() {
+                                $("#resendButton"+ "[[${mark.id}]]").click(function() {
                                     $.get( "/mark/[[${mark.id}]]/noresend", function( data ) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        var numberPage = [[${param.page}]];
+                                        var urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -59,9 +71,14 @@
                                     class="btn btn-info">No reenviar</button>
                             <script th:inline="javascript">
                                 /*<![CDATA[*/
-                                $( "#noresendButton"+ "[[${mark.id}]]" ).click(function() {
+                                $( "#noresendButton" + "[[${mark.id}]]" ).click(function() {
                                     $.get( "/mark/[[${mark.id}]]/resend", function( data ) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        var numberPage = [[${param.page}]];
+                                        var urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -76,6 +93,7 @@ mark.id}">eliminar</a>
         </table>
     </div>
     <div th:if="${#lists.isEmpty(markList)}"> No marks </div>
+    <footer th:replace="fragments/pagination"></footer>
 </div>
 
 <footer th:replace="fragments/footer"></footer>
