--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -31,15 +31,13 @@ springsecurity4">
                         <a class="dropdown-item" href="/user/list">Ver usuarios</a>
                     </div>
                 </li>
-                <li sec:authorize="hasRole('ROLE_ADMIN')" id= "professor-menu" class="nav-item dropdown">
+                <li id= "professor-menu" class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="profesorDropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false"> Gestión de profesores
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/professor/list">Ver profesores</a>
-                    </div>
-                    <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="/professor/add">Añadir profesor</a>
+                        <a class="dropdown-item" sec:authorize="hasRole('ROLE_ADMIN')" href="/professor/add">Añadir profesor</a>
                     </div>
                 </li>
             </ul>
