--- a/src/main/resources/templates/professor/list.html
+++ b/src/main/resources/templates/professor/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments/head"></head>
 
 <body>
@@ -29,14 +29,14 @@
                 <td th:text="${professor.surname}"> Alonso Garcia</td>
                 <td th:text="${professor.categoria}">informatica</td>
 
-                <td><a th:href="${'/professor/details/' + professor.id}">detalles</a></td>
-                <td><a th:href="${'/professor/edit/' + professor.id}">modificar</a></td>
-                <td><a th:href="${'/professor/delete/' + professor.id}">eliminar</a></td>
+                <td><a sec:authorize="hasRole('ADMIN') || hasRole('PROFESSOR')" th:href="${'/professor/details/' + professor.id}">detalles</a></td>
+                <td><a sec:authorize="hasRole('ADMIN')" th:href="${'/professor/edit/' + professor.id}">modificar</a></td>
+                <td><a sec:authorize="hasRole('ADMIN')" th:href="${'/professor/delete/' + professor.id}">eliminar</a></td>
             </tr>
             </tbody>
         </table>
     </div>
-    <div th:if="${#lists.isEmpty(professorList)}"> No marks </div>
+    <div th:if="${#lists.isEmpty(professorList)}"> No hay profesores </div>
 </div>
 
 <footer th:replace="fragments/footer"></footer>
